# multitrack_app_2

./: .gitignore  .metadata  README.md  pubspec.yaml  stitch_design.html
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  audio_mixer.cpp  audio_mixer.h  audio_preloader.cpp  audio_preloader.h  audio_renderer.cpp  audio_renderer.h  audio_utils.cpp  audio_utils.h  bridge.cpp  bridge.h  drum_sampler.cpp  drum_sampler.h  lock_free_ring_buffer.h  lufs_analyzer.cpp  lufs_analyzer.h  metronome_engine.cpp  metronome_engine.h  oboe_player.cpp  oboe_player.h  read_readme.sh  setup_soundtouch.sh
android/app/src/main/cpp/soundtouch/source/: cpu_detect_stub.cpp
android/app/src/main/kotlin/com/multitracksdf/multitracks_df_pro/: MainActivity.kt
docs/: ARCHITECTURE_RENDER_SHOW_SETLIST_EXPORT.md  AUDIT_LIVE_PERFORMANCE_STAGE_READY.md  DIAGNOSTIC_REALTIME_AUDIO_DROPOUTS.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: injection_container.dart  main.dart
lib/core/audio_engine/: audio_dsp_service.dart  iaudio_engine_service.dart  just_audio_engine.dart  mixer_level_controller.dart  native_audio_engine.dart
lib/core/presentation/widgets/: shared_waveform_timeline.dart
lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/features/performance/presentation/pages/: live_performance_page.dart  live_preview_page.dart  performance_list_page.dart
lib/features/performance/presentation/stores/: live_performance_store.dart  live_performance_store.g.dart  performance_list_store.dart  performance_list_store.g.dart
lib/features/performance/presentation/widgets/: drum_rack_panel.dart
lib/features/player_mixer/data/models/: eq_band_model.dart  eq_band_model.g.dart  marker_model.dart  marker_model.g.dart  midi_config_model.dart  midi_config_model.g.dart  music_model.dart  music_model.g.dart  setlist_item_model.dart  setlist_item_model.g.dart  setlist_model.dart  setlist_model.g.dart  track_model.dart  track_model.g.dart
lib/features/player_mixer/data/repositories/: isar_music_repository.dart
lib/features/player_mixer/data/utils/: audio_garbage_collector.dart
lib/features/player_mixer/domain/entities/: app_mode.dart  eq_band_data.dart  marker.dart  music.dart  setlist.dart  setlist_item.dart  track.dart
lib/features/player_mixer/domain/repositories/: imusic_repository.dart
lib/features/player_mixer/domain/services/: offline_render_isolate.dart  setlist_export_service.dart
lib/features/player_mixer/presentation/dialogs/: transpose_config_dialog.dart
lib/features/player_mixer/presentation/enums/: music_sort_type.dart
lib/features/player_mixer/presentation/pages/: create_music_page.dart  create_setlist_page.dart  markers_editor_page.dart  music_library_page.dart  setlist_library_page.dart  setlist_mastering_page.dart  stage_page.dart  system_page.dart
lib/features/player_mixer/presentation/stores/: create_music_store.dart  create_music_store.g.dart  create_setlist_store.dart  create_setlist_store.g.dart  music_library_store.dart  music_library_store.g.dart  setlist_config_store.dart  setlist_config_store.g.dart  setlist_library_store.dart  setlist_library_store.g.dart  stage_store.dart  stage_store.g.dart  system_store.dart  system_store.g.dart
lib/features/player_mixer/presentation/widgets/: live_mixer_widget.dart  preview_timeline.dart  setlist_song_config_tile.dart  setlist_timeline.dart
lib/features/player_mixer/presentation/widgets/eq/: eq_interactive_dialog.dart  eq_painter.dart
test/: widget_test.dart
test/features/player_mixer/presentation/stores/: setlist_config_store_test.dart  setlist_config_store_test.mocks.dart
